# rust-todo

./: Cargo.toml  README.md  docker-compose.yml
http/: create.http  create_account.http  get_account.http  get_all.http  health.http  update.http  update_status.http
migrations/2023-01-30-120408_create_tables/: down.sql  up.sql
migrations/2023-01-30-121123_insert_sample_data/: down.sql  up.sql
src/: db_utils.rs  main.rs  models.rs  schema.rs
src/account/: handler.rs  message.rs  mod.rs  model.rs  service.rs
src/health/: mod.rs  model.rs  service.rs
src/todo/: model.rs  service.rs
